ingress/traefik/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo
    spec:
      containers:
      - image: jmv2/print-headers:0.0.3
        imagePullPolicy: Always
        name: print-headers
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo
  name: demo
  namespace: default
spec:
  selector:
    app: demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
---
# Check 5xx responses, break circuit if above threshold
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: response-code-check
  namespace: default
spec:
  circuitBreaker:
    expression: ResponseCodeRatio(500, 600, 0, 600) > 0.33
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: demo
  name: demo
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${TEST_INGRESS_FQDN}`)
      services:
        - name: demo
          namespace: default
          port: 80
      middlewares:
        - name: response-code-check
          namespace: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: demo
  name: demo-secure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${TEST_INGRESS_FQDN}`)
      services:
        - name: demo
          namespace: default
          port: 80
      middlewares:
        - name: response-code-check
          namespace: default
  tls:
    store:
      name: default
